<resources>
    <string name="app_name">订餐系统</string>
    <string name="title_activity_login">订餐系统</string>

    <!-- 注册相关 -->
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_button">登录</string>
    <string name="register_button">注册</string>
    <string name="phone_number">请输入您的手机号码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="comfirm_password">请再次输入密码</string>
    <string name="user_type_user">个人用户</string>
    <string name="user_type_team">团队用户</string>
    <string name="user_type_business">商家用户</string>
    <string name="title_activity_register">注册</string>
    <string name="register_type">注册类型</string>
    <string name="comfirm">确定</string>
    <string name="forget_password">忘记密码？</string>
    <string name="password_error">密码不能为空</string>
    <string name="login_error">用户名不能为空</string>
    <string name="Location_info">设置定位信息</string>
    <string name="mael_time">用餐时间</string>
    <string name="breakfest">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="set_breakfest">设置早餐时间</string>
    <string name="set_lunch">设置午餐时间</string>
    <string name="set_dinner">设置晚餐时间</string>
    <string name="add">点击添加店铺+</string>
    <string name="nullof">空空如也</string>
    <string name="nameofcanteen">请输入您的店铺的名称</string>
    <string name="chooseofcanteen">请选择经营品类></string>
    <string name="showyourcanteen">先简单介绍一下您的店铺吧</string>
    <string name="goinfo">去开店</string>
    <string name="province">省-市-地区                       ></string>
    <string name="street">请填写详细地址</string>
    <string name="up">立即上传></string>
    <string name="upsteam">上传</string>
    <string name="reup">重新上传</string>
    <string name="menu_name">菜单</string>
    <string name="dish_name">菜名</string>
    <string name="shopcart">购物车</string>
    <string name="estimate">综合评分</string>
    <string name="clear">清空</string>

    <string name="wait">待填写></string>
    <string name="save">保存</string>
    <string name="longtime">长期有效</string>
    <string name="dateoff">固定有效期</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="example">示例图</string>
    <string-array name="user_type">
        <item>个人</item>
        <item>团队</item>
        <item>商家</item>
    </string-array>

    <string name="next_step">下一步</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">订餐计划</string>
    <string name="title_notifications">订单</string>
    <string name="title_info">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pushtest">text</string>

    <string name="business_info">商家信息</string>
    <string name="WechatPayWay">微信支付</string>
    <string name="AlipayPayWay">支付宝支付</string>
    <string name="cash">现金支付</string>
    <string name="PayLeftTime">支付剩余时间</string>
    <string name="￥">￥</string>
    <string name="ChoosePayWay">选择支付方式</string>
    <string name="ConfirmPay">确认支付</string>

</resources>
