<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    tools:context="com.example.a206170.order_system.LoginAndSign.RegisterActivity"
    >


    <RelativeLayout
        android:id="@+id/register_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:addStatesFromChildren="true"
        android:weightSum="1"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="9dp">


        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="@string/phone_number"
            android:imeActionLabel="test"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="54dp" />

        <Button
            android:id="@+id/get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/get_code"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-81dp"
            android:background="@drawable/button_div"
            />


    </RelativeLayout>
    <LinearLayout
        android:id="@+id/register_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_input_code"
            android:hint="@string/input_code"
            android:inputType="number"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_input_password"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_comfirm_password"
            android:hint="@string/comfirm_password"
            android:inputType="textPassword"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_type"
                android:layout_marginLeft="5dp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/user_type">
            </Spinner>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_comfirm_button"
            android:background="@drawable/button_div"
            android:text="@string/register_button"/>

    </LinearLayout>


</LinearLayout>
