<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a206170.order_system.MealTimeActivity"
    android:layout_marginTop="@dimen/top"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/breakfast_form"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/breakfast"
            android:text="@string/breakfest"
            android:textStyle="bold"
            android:textSize="@dimen/title_font_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/breakfast_time"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/set_breakfast_time"
            android:text="@string/set_breakfest"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lunch_form"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lunch"
            android:text="@string/lunch"
            android:textStyle="bold"
            android:textSize="@dimen/title_font_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lunch_time"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/set_lunch_time"
            android:text="@string/set_lunch"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dinner_form"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dinner"
            android:text="@string/dinner"
            android:textStyle="bold"
            android:textSize="@dimen/title_font_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dinner_time"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/set_dinner_time"
            android:text="@string/set_dinner"/>
    </LinearLayout>

</LinearLayout>
