<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a206170.order_system.LoginAndSign.ForgetPasswordActivity"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="9dp"
        android:weightSum="1">
        <EditText
            android:id="@+id/forget_phone_number"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:imeActionLabel="test"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_weight="1.34"

            />

        <Button
            android:id="@+id/forget_get_code"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:text="@string/get_code"
            />



    </LinearLayout>


    <EditText
        android:id="@+id/forget_input_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_code"
        tools:layout_editor_absoluteX="216dp"
        android:layout_marginTop="@dimen/top"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/next_step"
        android:id="@+id/forget_next"
        android:layout_marginTop="@dimen/top"/>

</LinearLayout>
