<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            app:srcCompat="@drawable/adtest1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showyourcanteen"
            android:textSize="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_height="73dp"
            android:hint="@string/nameofcanteen" />

        <EditText
            android:id="@+id/typeET"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_height="52dp"
            android:hint="@string/chooseofcanteen"

            />


    </LinearLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goinfo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>