<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="160dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout2"
        android:weightSum="1">

        <EditText
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:ems="10"
            android:hint="@string/province"
            android:textSize="18dp"
            android:layout_weight="0.31" />

        <EditText
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="0.31"
            android:ems="10"
            android:hint="@string/street"
            android:textSize="18dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/linearLayout2"
        android:layout_alignBottom="@+id/linearLayout2"
        android:weightSum="1"
        android:id="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.42"
            android:gravity="center_vertical"
            android:text="店铺地址"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="22dp"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="联系人"
            android:gravity="center_vertical"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/nameedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textSize="18dp"
            android:gravity="center_vertical|right"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutpt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="联系电话"
            android:gravity="center_vertical"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/phone"
            android:background="@null"
            android:inputType="number"
            android:singleLine="true"
            android:gravity="center_vertical|right"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/linearLayoutpt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="店铺照片"
            android:gravity="center_vertical"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/photoup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:hint="@string/up"
            android:textAlignment="textEnd"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/photo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="下一步" />
    </LinearLayout>


</RelativeLayout>